# raylib-pathfinding

./: CMakeLists.txt  constants.h  main.cpp
include/: bot.h  constants.h  goal.h  grid.h  node.h  obstacle.h  types.h
src/: grid.cpp  main.cpp  obstacle.cpp
